# Are we able to have this be per-package?
cargo-features = ["strip"]

[profile.dev]
panic = "abort"
#opt-level = "z"
debug = 2
#split-debuginfo = "packed"

[profile.release]
panic = "abort"
opt-level = "z"
#strip = "symbols"
debug = 2
#split-debuginfo = "packed"
lto = "fat"

[workspace]

members = [
    "kernel",
#    "libc",
#    "libb",
#    "libbc",
#    "libstd",
#    "platform"
]
